crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__assignment__alias.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/assignment/alias.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..205: // lex: ok
// parse: ok
// sema: todo

bit[2] a;
creg b[2];
qubit[5] q1;
qreg q2[7];
let q = q1 ++ q2;
let c = a[{0,1}] ++ b[1:2];
let qq = q1[{1,3,4}];
let qqq = qq ++ q2[1:2:6];
let d = c;
let e = d[1];

CLASSICAL_DECLARATION_STATEMENT@39..48: bit[2] a;
SCALAR_TYPE@39..45: bit[2]
DESIGNATOR@42..45: [2]
LITERAL@43..44: 2
NAME@46..47: a
OLD_STYLE_DECLARATION_STATEMENT@49..59: creg b[2];
INDEXED_IDENTIFIER@54..58: b[2]
INDEX_OPERATOR@55..58: [2]
EXPRESSION_LIST@56..57: 2
LITERAL@56..57: 2
QUANTUM_DECLARATION_STATEMENT@60..72: qubit[5] q1;
QUBIT_TYPE@60..68: qubit[5]
DESIGNATOR@65..68: [5]
LITERAL@66..67: 5
NAME@69..71: q1
OLD_STYLE_DECLARATION_STATEMENT@73..84: qreg q2[7];
INDEXED_IDENTIFIER@78..83: q2[7]
INDEX_OPERATOR@80..83: [7]
EXPRESSION_LIST@81..82: 7
LITERAL@81..82: 7
LET_STMT@85..102: let q = q1 ++ q2;
BIN_EXPR@93..101: q1 ++ q2
IDENTIFIER@93..95: q1
IDENTIFIER@99..101: q2
LET_STMT@103..130: let c = a[{0,1}] ++ b[1:2];
BIN_EXPR@111..129: a[{0,1}] ++ b[1:2]
INDEXED_IDENTIFIER@111..119: a[{0,1}]
IDENTIFIER@111..112: a
INDEX_OPERATOR@112..119: [{0,1}]
SET_EXPRESSION@113..118: {0,1}
EXPRESSION_LIST@114..117: 0,1
LITERAL@114..115: 0
LITERAL@116..117: 1
INDEXED_IDENTIFIER@123..129: b[1:2]
IDENTIFIER@123..124: b
INDEX_OPERATOR@124..129: [1:2]
EXPRESSION_LIST@125..128: 1:2
RANGE_EXPR@125..128: 1:2
LITERAL@125..126: 1
LITERAL@127..128: 2
LET_STMT@131..152: let qq = q1[{1,3,4}];
INDEXED_IDENTIFIER@140..151: q1[{1,3,4}]
IDENTIFIER@140..142: q1
INDEX_OPERATOR@142..151: [{1,3,4}]
SET_EXPRESSION@143..150: {1,3,4}
EXPRESSION_LIST@144..149: 1,3,4
LITERAL@144..145: 1
LITERAL@146..147: 3
LITERAL@148..149: 4
LET_STMT@153..179: let qqq = qq ++ q2[1:2:6];
BIN_EXPR@163..178: qq ++ q2[1:2:6]
IDENTIFIER@163..165: qq
INDEXED_IDENTIFIER@169..178: q2[1:2:6]
IDENTIFIER@169..171: q2
INDEX_OPERATOR@171..178: [1:2:6]
EXPRESSION_LIST@172..177: 1:2:6
RANGE_EXPR@172..177: 1:2:6
LITERAL@172..173: 1
LITERAL@174..175: 2
LITERAL@176..177: 6
LET_STMT@180..190: let d = c;
IDENTIFIER@188..189: c
LET_STMT@191..204: let e = d[1];
INDEXED_IDENTIFIER@199..203: d[1]
IDENTIFIER@199..200: d
INDEX_OPERATOR@200..203: [1]
EXPRESSION_LIST@201..202: 1
LITERAL@201..202: 1
