crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__assignment__alias.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/assignment/alias.qasm
expect-sema: Todo
--- sema ---
ok: true
panicked: false
errors: 0
--- asg ---
(no asg)
