crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__assignment__assignment.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/assignment/assignment.qasm
expect-lex: Ok
--- source ---
// lex: ok
// parse: todo
// sema: skip

bit[2] a;
bit[2] b;
creg b[2];
qubit[3] q;
int[10] x = 12;
a[0] = b[1];
x += int[10](a[1]);
measure q[1] -> a[0];
a = measure q[1:2];
measure q[0];
b = a == 0;
--- lexer ---
ok: true
errors: 0
[0] LineComment "// lex: ok" @0..10
[1] Whitespace "\n" @10..11
[2] LineComment "// parse: todo" @11..25
[3] Whitespace "\n" @25..26
[4] LineComment "// sema: skip" @26..39
[5] Whitespace "\n\n" @39..41
[6] Ident "bit" @41..44
[7] OpenBracket "[" @44..45
[8] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @45..46
[9] CloseBracket "]" @46..47
[10] Whitespace " " @47..48
[11] Ident "a" @48..49
[12] Semi ";" @49..50
[13] Whitespace "\n" @50..51
[14] Ident "bit" @51..54
[15] OpenBracket "[" @54..55
[16] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @55..56
[17] CloseBracket "]" @56..57
[18] Whitespace " " @57..58
[19] Ident "b" @58..59
[20] Semi ";" @59..60
[21] Whitespace "\n" @60..61
[22] Ident "creg" @61..65
[23] Whitespace " " @65..66
[24] Ident "b" @66..67
[25] OpenBracket "[" @67..68
[26] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @68..69
[27] CloseBracket "]" @69..70
[28] Semi ";" @70..71
[29] Whitespace "\n" @71..72
[30] Ident "qubit" @72..77
[31] OpenBracket "[" @77..78
[32] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @78..79
[33] CloseBracket "]" @79..80
[34] Whitespace " " @80..81
[35] Ident "q" @81..82
[36] Semi ";" @82..83
[37] Whitespace "\n" @83..84
[38] Ident "int" @84..87
[39] OpenBracket "[" @87..88
[40] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "10" @88..90
[41] CloseBracket "]" @90..91
[42] Whitespace " " @91..92
[43] Ident "x" @92..93
[44] Whitespace " " @93..94
[45] Eq "=" @94..95
[46] Whitespace " " @95..96
[47] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "12" @96..98
[48] Semi ";" @98..99
[49] Whitespace "\n" @99..100
[50] Ident "a" @100..101
[51] OpenBracket "[" @101..102
[52] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0" @102..103
[53] CloseBracket "]" @103..104
[54] Whitespace " " @104..105
[55] Eq "=" @105..106
[56] Whitespace " " @106..107
[57] Ident "b" @107..108
[58] OpenBracket "[" @108..109
[59] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @109..110
[60] CloseBracket "]" @110..111
[61] Semi ";" @111..112
[62] Whitespace "\n" @112..113
[63] Ident "x" @113..114
[64] Whitespace " " @114..115
[65] Plus "+" @115..116
[66] Eq "=" @116..117
[67] Whitespace " " @117..118
[68] Ident "int" @118..121
[69] OpenBracket "[" @121..122
[70] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "10" @122..124
[71] CloseBracket "]" @124..125
[72] OpenParen "(" @125..126
[73] Ident "a" @126..127
[74] OpenBracket "[" @127..128
[75] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @128..129
[76] CloseBracket "]" @129..130
[77] CloseParen ")" @130..131
[78] Semi ";" @131..132
[79] Whitespace "\n" @132..133
[80] Ident "measure" @133..140
[81] Whitespace " " @140..141
[82] Ident "q" @141..142
[83] OpenBracket "[" @142..143
[84] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @143..144
[85] CloseBracket "]" @144..145
[86] Whitespace " " @145..146
[87] Minus "-" @146..147
[88] Gt ">" @147..148
[89] Whitespace " " @148..149
[90] Ident "a" @149..150
[91] OpenBracket "[" @150..151
[92] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0" @151..152
[93] CloseBracket "]" @152..153
[94] Semi ";" @153..154
[95] Whitespace "\n" @154..155
[96] Ident "a" @155..156
[97] Whitespace " " @156..157
[98] Eq "=" @157..158
[99] Whitespace " " @158..159
[100] Ident "measure" @159..166
[101] Whitespace " " @166..167
[102] Ident "q" @167..168
[103] OpenBracket "[" @168..169
[104] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @169..170
[105] Colon ":" @170..171
[106] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @171..172
[107] CloseBracket "]" @172..173
[108] Semi ";" @173..174
[109] Whitespace "\n" @174..175
[110] Ident "measure" @175..182
[111] Whitespace " " @182..183
[112] Ident "q" @183..184
[113] OpenBracket "[" @184..185
[114] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0" @185..186
[115] CloseBracket "]" @186..187
[116] Semi ";" @187..188
[117] Whitespace "\n" @188..189
[118] Ident "b" @189..190
[119] Whitespace " " @190..191
[120] Eq "=" @191..192
[121] Whitespace " " @192..193
[122] Ident "a" @193..194
[123] Whitespace " " @194..195
[124] Eq "=" @195..196
[125] Eq "=" @196..197
[126] Whitespace " " @197..198
[127] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0" @198..199
[128] Semi ";" @199..200
[129] Whitespace "\n" @200..201
