crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__assignment__assignment.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/assignment/assignment.qasm
expect-parse: Todo
--- parser ---
ok: false
panicked: false
errors: 2
--- ast ---
SOURCE_FILE@0..161: 
bit[2] a;
bit[2] b;
creg b[2];
qubit[3] q;
int[10] x = 12;
a[0] = b[1];
x += int[10](a[1]);
measure q[1] -> a[0];
a = measure q[1:2];
measure q[0];
b = a == 0;

CLASSICAL_DECLARATION_STATEMENT@1..10: bit[2] a;
SCALAR_TYPE@1..7: bit[2]
DESIGNATOR@4..7: [2]
LITERAL@5..6: 2
NAME@8..9: a
CLASSICAL_DECLARATION_STATEMENT@11..20: bit[2] b;
SCALAR_TYPE@11..17: bit[2]
DESIGNATOR@14..17: [2]
LITERAL@15..16: 2
NAME@18..19: b
OLD_STYLE_DECLARATION_STATEMENT@21..31: creg b[2];
OLD_TYPED_PARAM@21..30: creg b[2]
INDEX_OPERATOR@27..30: [2]
EXPRESSION_LIST@28..29: 2
LITERAL@28..29: 2
QUANTUM_DECLARATION_STATEMENT@32..43: qubit[3] q;
QUBIT_TYPE@32..40: qubit[3]
DESIGNATOR@37..40: [3]
LITERAL@38..39: 3
NAME@41..42: q
CLASSICAL_DECLARATION_STATEMENT@44..59: int[10] x = 12;
SCALAR_TYPE@44..51: int[10]
DESIGNATOR@47..51: [10]
LITERAL@48..50: 10
NAME@52..53: x
LITERAL@56..58: 12
ASSIGNMENT_STMT@60..72: a[0] = b[1];
INDEXED_IDENTIFIER@60..64: a[0]
IDENTIFIER@60..61: a
INDEX_OPERATOR@61..64: [0]
EXPRESSION_LIST@62..63: 0
LITERAL@62..63: 0
INDEXED_IDENTIFIER@67..71: b[1]
IDENTIFIER@67..68: b
INDEX_OPERATOR@68..71: [1]
EXPRESSION_LIST@69..70: 1
LITERAL@69..70: 1
EXPR_STMT@73..92: x += int[10](a[1]);
BIN_EXPR@73..91: x += int[10](a[1])
IDENTIFIER@73..74: x
CAST_EXPRESSION@78..91: int[10](a[1])
SCALAR_TYPE@78..85: int[10]
DESIGNATOR@81..85: [10]
LITERAL@82..84: 10
INDEXED_IDENTIFIER@86..90: a[1]
IDENTIFIER@86..87: a
INDEX_OPERATOR@87..90: [1]
EXPRESSION_LIST@88..89: 1
LITERAL@88..89: 1
EXPR_STMT@93..108: measure q[1] ->
BIN_EXPR@93..108: measure q[1] ->
MEASURE_EXPRESSION@93..105: measure q[1]
INDEXED_IDENTIFIER@101..105: q[1]
IDENTIFIER@101..102: q
INDEX_OPERATOR@102..105: [1]
EXPRESSION_LIST@103..104: 1
LITERAL@103..104: 1
ERROR@107..108: >
EXPR_STMT@109..114: a[0];
INDEXED_IDENTIFIER@109..113: a[0]
IDENTIFIER@109..110: a
INDEX_OPERATOR@110..113: [0]
EXPRESSION_LIST@111..112: 0
LITERAL@111..112: 0
ASSIGNMENT_STMT@115..134: a = measure q[1:2];
IDENTIFIER@115..116: a
MEASURE_EXPRESSION@119..133: measure q[1:2]
INDEXED_IDENTIFIER@127..133: q[1:2]
IDENTIFIER@127..128: q
INDEX_OPERATOR@128..133: [1:2]
EXPRESSION_LIST@129..132: 1:2
RANGE_EXPR@129..132: 1:2
LITERAL@129..130: 1
LITERAL@131..132: 2
EXPR_STMT@135..148: measure q[0];
MEASURE_EXPRESSION@135..147: measure q[0]
INDEXED_IDENTIFIER@143..147: q[0]
IDENTIFIER@143..144: q
INDEX_OPERATOR@144..147: [0]
EXPRESSION_LIST@145..146: 0
LITERAL@145..146: 0
ASSIGNMENT_STMT@149..160: b = a == 0;
IDENTIFIER@149..150: b
BIN_EXPR@153..159: a == 0
IDENTIFIER@153..154: a
LITERAL@158..159: 0
