crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__assignment__slices.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/assignment/slices.qasm
expect-parse: Todo
--- parser ---
ok: false
panicked: false
errors: 18
--- ast ---
SOURCE_FILE@0..406: // lex: ok
// parse: todo
// sema: skip

array[uint[16], 2, 2] a = {{1, 2}, {3, 4}};
array[uint[16], 2, 4] b = {{1, 2, 3, 4}, {5, 6, 7, 8}};
// Various forms of testing that assignments can be made to indexed
// identifiers, and from indexed identifiers.
a = b[0:1][0:1];
a[0:1] = b[0:1][0:1];
a[0] = b[0][0:1];
a[0][0] = b[0][0];
a[0][0:1] = b[1][1:2:3];
a[0:1][0] = b[0:1][0];
a[0:1][0:1] = b[0:1][0:1];

CLASSICAL_DECLARATION_STATEMENT@41..84: array[uint[16], 2, 2] a = {{1, 2}, {3, 4}};
ARRAY_TYPE@41..62: array[uint[16], 2, 2]
SCALAR_TYPE@47..55: uint[16]
DESIGNATOR@51..55: [16]
LITERAL@52..54: 16
LITERAL@57..58: 2
LITERAL@60..61: 2
NAME@63..64: a
BLOCK_EXPR@67..83: {{1, 2}, {3, 4}}
EXPR_STMT@68..74: {1, 2}
BLOCK_EXPR@68..74: {1, 2}
EXPR_STMT@69..70: 1
LITERAL@69..70: 1
ERROR@70..71: ,
LITERAL@72..73: 2
ERROR@74..75: ,
BLOCK_EXPR@76..82: {3, 4}
EXPR_STMT@77..78: 3
LITERAL@77..78: 3
ERROR@78..79: ,
LITERAL@80..81: 4
CLASSICAL_DECLARATION_STATEMENT@85..140: array[uint[16], 2, 4] b = {{1, 2, 3, 4}, {5, 6, 7, 8}};
ARRAY_TYPE@85..106: array[uint[16], 2, 4]
SCALAR_TYPE@91..99: uint[16]
DESIGNATOR@95..99: [16]
LITERAL@96..98: 16
LITERAL@101..102: 2
LITERAL@104..105: 4
NAME@107..108: b
BLOCK_EXPR@111..139: {{1, 2, 3, 4}, {5, 6, 7, 8}}
EXPR_STMT@112..124: {1, 2, 3, 4}
BLOCK_EXPR@112..124: {1, 2, 3, 4}
EXPR_STMT@113..114: 1
LITERAL@113..114: 1
ERROR@114..115: ,
EXPR_STMT@116..117: 2
LITERAL@116..117: 2
ERROR@117..118: ,
EXPR_STMT@119..120: 3
LITERAL@119..120: 3
ERROR@120..121: ,
LITERAL@122..123: 4
ERROR@124..125: ,
BLOCK_EXPR@126..138: {5, 6, 7, 8}
EXPR_STMT@127..128: 5
LITERAL@127..128: 5
ERROR@128..129: ,
EXPR_STMT@130..131: 6
LITERAL@130..131: 6
ERROR@131..132: ,
EXPR_STMT@133..134: 7
LITERAL@133..134: 7
ERROR@134..135: ,
LITERAL@136..137: 8
ASSIGNMENT_STMT@255..271: a = b[0:1][0:1];
IDENTIFIER@255..256: a
INDEXED_IDENTIFIER@259..270: b[0:1][0:1]
IDENTIFIER@259..260: b
INDEX_OPERATOR@260..265: [0:1]
EXPRESSION_LIST@261..264: 0:1
RANGE_EXPR@261..264: 0:1
LITERAL@261..262: 0
LITERAL@263..264: 1
INDEX_OPERATOR@265..270: [0:1]
EXPRESSION_LIST@266..269: 0:1
RANGE_EXPR@266..269: 0:1
LITERAL@266..267: 0
LITERAL@268..269: 1
ASSIGNMENT_STMT@272..293: a[0:1] = b[0:1][0:1];
INDEXED_IDENTIFIER@272..278: a[0:1]
IDENTIFIER@272..273: a
INDEX_OPERATOR@273..278: [0:1]
EXPRESSION_LIST@274..277: 0:1
RANGE_EXPR@274..277: 0:1
LITERAL@274..275: 0
LITERAL@276..277: 1
INDEXED_IDENTIFIER@281..292: b[0:1][0:1]
IDENTIFIER@281..282: b
INDEX_OPERATOR@282..287: [0:1]
EXPRESSION_LIST@283..286: 0:1
RANGE_EXPR@283..286: 0:1
LITERAL@283..284: 0
LITERAL@285..286: 1
INDEX_OPERATOR@287..292: [0:1]
EXPRESSION_LIST@288..291: 0:1
RANGE_EXPR@288..291: 0:1
LITERAL@288..289: 0
LITERAL@290..291: 1
ASSIGNMENT_STMT@294..311: a[0] = b[0][0:1];
INDEXED_IDENTIFIER@294..298: a[0]
IDENTIFIER@294..295: a
INDEX_OPERATOR@295..298: [0]
EXPRESSION_LIST@296..297: 0
LITERAL@296..297: 0
INDEXED_IDENTIFIER@301..310: b[0][0:1]
IDENTIFIER@301..302: b
INDEX_OPERATOR@302..305: [0]
EXPRESSION_LIST@303..304: 0
LITERAL@303..304: 0
INDEX_OPERATOR@305..310: [0:1]
EXPRESSION_LIST@306..309: 0:1
RANGE_EXPR@306..309: 0:1
LITERAL@306..307: 0
LITERAL@308..309: 1
ASSIGNMENT_STMT@312..330: a[0][0] = b[0][0];
INDEXED_IDENTIFIER@312..319: a[0][0]
IDENTIFIER@312..313: a
INDEX_OPERATOR@313..316: [0]
EXPRESSION_LIST@314..315: 0
LITERAL@314..315: 0
INDEX_OPERATOR@316..319: [0]
EXPRESSION_LIST@317..318: 0
LITERAL@317..318: 0
INDEXED_IDENTIFIER@322..329: b[0][0]
IDENTIFIER@322..323: b
INDEX_OPERATOR@323..326: [0]
EXPRESSION_LIST@324..325: 0
LITERAL@324..325: 0
INDEX_OPERATOR@326..329: [0]
EXPRESSION_LIST@327..328: 0
LITERAL@327..328: 0
ASSIGNMENT_STMT@331..355: a[0][0:1] = b[1][1:2:3];
INDEXED_IDENTIFIER@331..340: a[0][0:1]
IDENTIFIER@331..332: a
INDEX_OPERATOR@332..335: [0]
EXPRESSION_LIST@333..334: 0
LITERAL@333..334: 0
INDEX_OPERATOR@335..340: [0:1]
EXPRESSION_LIST@336..339: 0:1
RANGE_EXPR@336..339: 0:1
LITERAL@336..337: 0
LITERAL@338..339: 1
INDEXED_IDENTIFIER@343..354: b[1][1:2:3]
IDENTIFIER@343..344: b
INDEX_OPERATOR@344..347: [1]
EXPRESSION_LIST@345..346: 1
LITERAL@345..346: 1
INDEX_OPERATOR@347..354: [1:2:3]
EXPRESSION_LIST@348..353: 1:2:3
RANGE_EXPR@348..353: 1:2:3
LITERAL@348..349: 1
LITERAL@350..351: 2
LITERAL@352..353: 3
ASSIGNMENT_STMT@356..378: a[0:1][0] = b[0:1][0];
INDEXED_IDENTIFIER@356..365: a[0:1][0]
IDENTIFIER@356..357: a
INDEX_OPERATOR@357..362: [0:1]
EXPRESSION_LIST@358..361: 0:1
RANGE_EXPR@358..361: 0:1
LITERAL@358..359: 0
LITERAL@360..361: 1
INDEX_OPERATOR@362..365: [0]
EXPRESSION_LIST@363..364: 0
LITERAL@363..364: 0
INDEXED_IDENTIFIER@368..377: b[0:1][0]
IDENTIFIER@368..369: b
INDEX_OPERATOR@369..374: [0:1]
EXPRESSION_LIST@370..373: 0:1
RANGE_EXPR@370..373: 0:1
LITERAL@370..371: 0
LITERAL@372..373: 1
INDEX_OPERATOR@374..377: [0]
EXPRESSION_LIST@375..376: 0
LITERAL@375..376: 0
ASSIGNMENT_STMT@379..405: a[0:1][0:1] = b[0:1][0:1];
INDEXED_IDENTIFIER@379..390: a[0:1][0:1]
IDENTIFIER@379..380: a
INDEX_OPERATOR@380..385: [0:1]
EXPRESSION_LIST@381..384: 0:1
RANGE_EXPR@381..384: 0:1
LITERAL@381..382: 0
LITERAL@383..384: 1
INDEX_OPERATOR@385..390: [0:1]
EXPRESSION_LIST@386..389: 0:1
RANGE_EXPR@386..389: 0:1
LITERAL@386..387: 0
LITERAL@388..389: 1
INDEXED_IDENTIFIER@393..404: b[0:1][0:1]
IDENTIFIER@393..394: b
INDEX_OPERATOR@394..399: [0:1]
EXPRESSION_LIST@395..398: 0:1
RANGE_EXPR@395..398: 0:1
LITERAL@395..396: 0
LITERAL@397..398: 1
INDEX_OPERATOR@399..404: [0:1]
EXPRESSION_LIST@400..403: 0:1
RANGE_EXPR@400..403: 0:1
LITERAL@400..401: 0
LITERAL@402..403: 1
